--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: quote-gen-container
     ports:
       - "5000:5000"
+    volumes:
+      - quoteapp:/quote_gen/app
   web2:
     build: ./quote_disp
     container_name: quote-disp-container
@@ -12,3 +14,8 @@ services:
       - "5001:5001"
     depends_on:
       - web1
+    volumes:
+      - quoteapp:/quote_disp/app
+
+volumes:
+  quoteapp:
